changes the form for mobility text fields; localizes language names [ch10448]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,9 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  languages:
+    en: "en"
+    it: "it"
+    de: "de"
+    fr: "fr"
+
